--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "sweetalert2": "^11.7.8",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
